# agent-service-claude

./: .env  README.md  opencode.json  pyproject.toml
ide-plugin/: build.gradle.kts  gradle.properties
scripts/: smoke-agent-e2e.ps1  start-agent-service.ps1  start-claude-code-adapter.ps1  start-local.ps1  start-opencode-adapter.ps1  stop-claude-code-adapter.ps1  stop-local.ps1
src/agents/: __init__.py  orchestrator.py  repo_scanner_agent.py
src/api/: chat_schemas.py  routes_generate.py  routes_jobs.py  routes_memory.py  routes_sessions.py  routes_tools.py  run_schemas.py  schemas.py
src/app/: bootstrap.py  config.py  main.py
src/chat/: memory_store.py  runtime.py
src/claude_code_adapter_app/: __init__.py  anthropic_gateway.py  cli_runtime.py  config.py  errors.py  event_parser.py  gigachat_auth.py  headless_server.py  main.py  process_supervisor.py  routes.py  schemas.py  service.py  state_store.py  workspace_diff.py
src/infrastructure/: preview_plan_store.py  runtime_errors.py  scenario_index_store.py
src/memory/: __init__.py  models.py  repository.py  service.py
tests/: test_agent_runtime_api.py  test_claude_code_adapter_api.py  test_claude_code_gateway.py  test_generate_preview_api.py  test_generation_quality.py  test_intent_planner.py  test_jobs_api.py  test_memory_rules_api.py  test_opencode_adapter_api.py  test_opencode_gigachat_bootstrap.py  test_opencode_runtime_api.py  test_orchestrator_preview_generation.py  test_orchestrator_quality_gate.py  test_repo_scanner_additional_roots.py  test_supervisor_cancellation.py  test_tools_api.py
(+56 files in other folders)
